argocd/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-postgres
  namespace: podoi
  labels:
    app: blog-postgres
spec:
  type: ClusterIP
  selector:
    app: blog-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
