argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podoi-website
  namespace: podoi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: joserod.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podoi-website
                port:
                  number: 80
    - host: www.joserod.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podoi-website
                port:
                  number: 80
  tls:
    - hosts:
        - joserod.space
        - www.joserod.space
      secretName: podoi-website-tls
